# paper-reader

./: README.md  README_zh-CN.md  package.oo.yaml  pyproject.toml
flows/test/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
subflows/flow-1/: subflow.oo.yaml
subflows/flow-1/scriptlets/: +scriptlet#1.py  +scriptlet#2.py
subflows/pdf_translater/: .subflow.ui.oo.json  subflow.oo.yaml
