[project]
name = "paper-reader"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = []

[tool]
[tool.poetry]
package-mode = false

[[tool.poetry.packages]]
include = "paper_reader"
from = "src"

[build-system]
requires = [ "poetry-core>=2.0.0,<3.0.0" ]
build-backend = "poetry.core.masonry.api"